# vestibulare

./: .gitignore  Dockerfile  api.py  api_vestibulare.py  compose.yaml  database.py  deploy-production.sh  dict_disciplinas.py  dict_turmas.py  faltas_boletim.py  main.py  mentor.py  mentor_service.py  pyproject.toml  set_logger.py  settings.py  test.py
app/: api_vestibulare.py  main.py  processo.py  pyproject.toml  set_logger.py  settings.py
app/queries/: query1.sql  query2.sql  query7.sql  query8.sql
queries/: query1.sql  query2.sql  query3.sql  query4.sql  query5.sql  query6.sql  test.sql
